dynomite/trybuild-tests/fail/item-not-on-struct-fail.stderr
error[E0774]: `derive` may only be applied to structs, enums and unions
 --> $DIR/item-not-on-struct-fail.rs:9:1
  |
9 | #[derive(Item)]
  | ^^^^^^^^^^^^^^^
